...
                    ),
                    const SizedBox(
                      height: 24,
                    ),
                    IvoryTextField(
                      key: const Key("PasswordTextFieldForMobileTab"),
                      label: "Password",
                      placeholder: 'Password',
                      controller: _passwordInputController,
                      onChanged: (inputValue) {},
                      keyboardType: TextInputType.visiblePassword,
                    ),
                    const SizedBox(
...
                      child: ListenableBuilder(
                        key: const Key("ContinueButton"),
                        listenable: _continueButtonController,
                        builder: (context, child) {
                          return Button(
                            key: const Key("ContinueButton"),
                            text: 'Continue',
                            disabledColor:
                                ClientConfig.getCustomColors().neutral300,
                            color: ClientConfig.getColorScheme().tertiary,
                            textColor: ClientConfig.getColorScheme().surface,
                            isLoading: viewModel is AuthLoadingViewModel,
                            onPressed: _continueButtonController.isEnabled
...
                          return const SizedBox(height: 8);
                        }
                      },
                    ),
                    IvoryTextField(
                      key: const Key("EmailTextField"),
                      label: 'Email address',
                      placeholder: 'Email address',
                      controller: _emailInputController,
                      focusNode: _emailFocusNode,
                      inputType: TextFieldInputType.email,
                    ),
                    const SizedBox(
...
