...
                  padding: ClientConfig.getCustomClientUiSettings()
                      .defaultScreenPadding,
                  child: Column(
                    crossAxisAlignment: CrossAxisAlignment.start,
                    children: [
                      Text(
                        "Verify login",
                        style: ClientConfig.getTextStyleScheme().heading1,
                      ),
                      const SizedBox(
                        height: 16,
                      ),
                      RichText(
...
                      const Spacer(),
                      SizedBox(
                        width: double.infinity,
                        height: 48,
                        child: Button(
                          key: keys.loginPage.otpConfirmButton,
                          text: 'Confirm',
                          disabledColor: const Color(0xFFDFE2E6),
                          color: ClientConfig.getColorScheme().tertiary,
                          textColor: ClientConfig.getColorScheme().surface,
                          isLoading: viewModel is AuthLoadingViewModel,
                          onPressed: _isInputComplete
                              ? () {
...
