...
          icon: Icon(Icons.home),
          label: 'Home',
        );
      case IuliusNavigationScreens.cardsScreen:
        return const BottomNavigationBarItem(
          icon: Icon(Icons.credit_card_outlined),
          label: 'Cards',
        );
      case IuliusNavigationScreens.transactionsScreen:
        return const BottomNavigationBarItem(
          icon: Icon(Icons.payments_outlined),
          label: 'Transactions',
        );
...
