...
        Row(
          mainAxisAlignment: MainAxisAlignment.center,
          children: [
            CardOptionsButton(
              icon: Icons.ac_unit,
              key: keys.cardActions.unFreezeCardButton,
              textLabel: 'Unfreeze',
              onPressed: () async {
                StoreProvider.of<AppState>(context).dispatch(
                  BankCardUnfreezeCommandAction(
                    bankCard: viewModel.bankCard!,
                    bankCards:
                        (StoreProvider.of<AppState>(
...
